--- a/lab03/contact2.html
+++ b/lab03/contact2.html
@@ -14,7 +14,7 @@
 
     <h2>Adrian Jerez, Syracuse University</h2>
     <p>
-        Booth Hall 412<br>
+        330 Ostrom<br>
         Syracuse, NY 13244
     </p>
 
@@ -24,6 +24,7 @@
             target="_blank">LinkedIn</a></p>
 
     <!-- LinkedIn Logo Image -->
+    <i class="fa-brands fa-linkedin"></i>
     <img src="ist 263/images/LI-Logo.jpg" alt="LinkedIn Logo">
 
     <h2>Contact Information:</h2>
