--- a/lab03/contact2.html
+++ b/lab03/contact2.html
@@ -14,7 +14,7 @@
 
     <h2>Adrian Jerez, Syracuse University</h2>
     <p>
-        Booth Hall 412<br>
+        300 Ostrom Ave<br>
         Syracuse, NY 13244
     </p>
 
@@ -25,6 +25,7 @@
 
     <!-- LinkedIn Logo Image -->
     <img src="ist 263/images/LI-Logo.jpg" alt="LinkedIn Logo">
+    <i class="fa-brands fa-linkedin"></i>
 
     <h2>Contact Information:</h2>
     <!-- Email Link -->
