--- a/lab03/contact2.html
+++ b/lab03/contact2.html
@@ -24,9 +24,10 @@
             target="_blank">LinkedIn</a></p>
 
     <!-- LinkedIn Logo Image -->
-    <img src="ist 263/images/LI-Logo.jpg" alt="LinkedIn Logo">
+    <body>
     <i class="fa-brands fa-linkedin"></i>
-
+    <body>
+        
     <h2>Contact Information:</h2>
     <!-- Email Link -->
     <p><a href="mailto:aajerez@syr.edu">Adrian Jerez Email</a></p>
