--- a/lab03/contact2.html
+++ b/lab03/contact2.html
@@ -24,7 +24,7 @@
             target="_blank">LinkedIn</a></p>
 
     <!-- LinkedIn Logo Image -->
-    <img src="ist 263/images/LI-Logo.jpg" alt="LinkedIn Logo">
+    <i class="fa-brands fa-linkedin"></i>
 
     <h2>Contact Information:</h2>
     <!-- Email Link -->
