--- a/lab04/contact2.html
+++ b/lab04/contact2.html
@@ -5,6 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <style>
+        form {
+            margin-top: 20px;
+        }
+        label {
+            display: block;
+            margin: 10px 0 5px;
+        }
+        textarea {
+            width: 100%;
+            height: 100px;
+        }
+        button {
+            margin-top: 10px;
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 
 <body>
@@ -20,8 +44,7 @@
 
     <h2>Professional Links:</h2>
     <!-- LinkedIn Link -->
-    <p><strong>My LinkedIn Profile:</strong> <a href="https://www.linkedin.com/in/adrian-jerez"
-            target="_blank">LinkedIn</a></p>
+    <p><strong>My LinkedIn Profile:</strong> <a href="https://www.linkedin.com/in/adrian-jerez" target="_blank">LinkedIn</a></p>
 
     <!-- LinkedIn Logo Image -->
     <i class="fa-brands fa-linkedin"></i>
@@ -30,11 +53,18 @@
     <!-- Email Link -->
     <p><a href="mailto:aajerez@syr.edu">Adrian Jerez Email</a></p>
 
+    <!-- Google Maps Embed -->
     <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.013341423551!2d-76.13162172375756!3d43.04115079180088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f30adff1d6e1%3A0x1be46be7c2373b12!2s505%20Comstock%20Ave%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1707019427646!5m2!1sen!2sus"
         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-</body>
+    <!-- Contact Form -->
+    <form action="" method="POST">
+        <fieldset>
+            <legend>Contact Form</legend>
 
-</html>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required><br>
+
+            <label for="contact-method">Preferred cont
