--- a/lab04/skills.html
+++ b/lab04/skills.html
@@ -1,41 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Orange Nation</title>
-<style>
-  /* Font Import */
-  @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
-  body {
-    font-family: 'trem', sans-serif; 
-    margin: 0;
-    padding: 0;
-    background-color: #f9f9f9;
-  }
-  .container {
-    max-width: 800px;
-    margin: 20px auto;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  h1 {
-    color: #ff7f00; /* Orange color */
-    text-align: center;
-  }
-  p {
-    line-height: 1.6;
-  }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Skills</title>
+    <style>
+        table, th, td {
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+        th, td {
+            padding: 10px;
+        }
+        caption {
+            caption-side: top;
+            font-size: 1.5em;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-
-<div class="container">
-  <h1>Orange Nation</h1>
-</div>
-
+    <table>
+        <caption>My Technical Skills</caption>
+        <tr>
+            <th>Skill</th>
+            <th>Proficiency</th>
+            <th>Years of Experience</th>
+        </tr>
+        <tr>
+            <td>HTML</td>
+            <td>Expert</td>
+            <td>3</td>
+        </tr>
+        <!-- Add more rows -->
+    </table>
 </body>
 </html>
