--- a/lab04/contact2.html
+++ b/lab04/contact2.html
@@ -60,7 +60,7 @@
         referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     <!-- Contact Form -->
-    <form action="" method="POST">
+    <form action="https://formspree.io/f/xldrqnqy" method="POST">
         <fieldset>
             <legend>Contact Form</legend>
 
