--- a/lab05/contact2.html
+++ b/lab05/contact2.html
@@ -44,10 +44,10 @@
 
     <h2>Professional Links:</h2>
     <!-- LinkedIn Link -->
-     <img src=""
     <p><strong>My LinkedIn Profile:</strong> <a href="https://www.linkedin.com/in/adrian-jerez" target="_blank">LinkedIn</a></p>
 
     <!-- LinkedIn Logo Image -->
+    <img src="R 1 1.png" alt="">
     <i class="fa-brands fa-linkedin"></i>
 
     <h2>Contact Information:</h2>
