--- a/lab05/contact2.html
+++ b/lab05/contact2.html
@@ -35,6 +35,8 @@
     <header>
         <h1>Contact</h1>
     </header>
+    <img src="../images/twitter_header.png" alt="Twitter Image">
+    
 
     <h2>Adrian Jerez, Syracuse University</h2>
     <p>
@@ -47,7 +49,7 @@
     <p><strong>My LinkedIn Profile:</strong> <a href="https://www.linkedin.com/in/adrian-jerez" target="_blank">LinkedIn</a></p>
 
     <!-- LinkedIn Logo Image -->
-    <img src="R 1 1.png" alt="">
+    <img src="R_1_1.png" alt="">
     <i class="fa-brands fa-linkedin"></i>
 
     <h2>Contact Information:</h2>
