--- a/lab05/contact2.html
+++ b/lab05/contact2.html
@@ -49,8 +49,7 @@
     <p><strong>My LinkedIn Profile:</strong> <a href="https://www.linkedin.com/in/adrian-jerez" target="_blank">LinkedIn</a></p>
 
     <!-- LinkedIn Logo Image -->
-    <img src="R_1_1.png" alt="">
-    <i class="fa-brands fa-linkedin"></i>
+    <img src="../images/R_1_1.png" alt="Linkedin Image">
 
     <h2>Contact Information:</h2>
     <!-- Email Link -->
