--- a/Participation/participation8b.html
+++ b/Participation/participation8b.html
@@ -1,9 +1,9 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Travel Central New York</title>
     <style>
-        /* General styles for header and navigation */
         header {
             text-align: center;
             padding: 20px;
@@ -25,7 +25,7 @@
             color: #333;
         }
 
-        /* Flexbox for article section */
+
         .attractions-section {
             display: flex;
             flex-wrap: wrap;
@@ -33,19 +33,18 @@
         }
 
         article {
-            flex-basis: 30%; /* Adjust based on your layout preference */
+            flex-basis: 30%;
             margin: 10px;
-            background-color: #f9f9f9;
+            background-color: #9bb3d6;
             padding: 15px;
             border-radius: 5px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
-        /* Styling for the footer */
         footer {
             text-align: center;
             padding: 20px;
-            background-color: #f1f1f1;
+            background-color: #f9f9f9;
         }
 
         footer a {
@@ -54,6 +53,7 @@
         }
     </style>
 </head>
+
 <body>
 
     <header>
@@ -73,44 +73,52 @@
     <main>
         <section id="featured-destination">
             <h2>Featured Destination: Finger Lakes</h2>
-            <p>Explore the stunning Finger Lakes region, known for its beautiful lakes, wineries, and scenic hiking trails. Whether you're looking to relax by the water or enjoy outdoor activities, the Finger Lakes has something for everyone.</p>
+            <p>Explore the stunning Finger Lakes region, known for its beautiful lakes, wineries, and scenic hiking
+                trails. Whether you're looking to relax by the water or enjoy outdoor activities, the Finger Lakes has
+                something for everyone.</p>
         </section>
 
         <section id="top-attractions">
             <h2>Top Attractions</h2>
             <div class="attractions-section">
-            <article class="article1">
-                <h3>Adirondack Mountains</h3>
-                <p>Perfect for nature lovers, the Adirondacks offer breathtaking views, hiking, and camping opportunities. Don't miss a chance to explore these magnificent mountains.</p>
-                <img src="../images/pexels-adirondacks.jpg" alt="Adirondack Mountains">
-            </article>
+                <article class="article1">
+                    <h3>Adirondack Mountains</h3>
+                    <p>Perfect for nature lovers, the Adirondacks offer breathtaking views, hiking, and camping
+                        opportunities. Don't miss a chance to explore these magnificent mountains.</p>
+                    <img src="../images/pexels-adirondacks.jpg" alt="Adirondack Mountains">
+                </article>
 
-            <article class="article2">
-                <h3>Syracuse</h3>
-                <p>A vibrant city with a rich history, Syracuse is home to museums, parks, and the renowned Syracuse University. Be sure to visit the city's downtown for great food and entertainment.</p>
-                <img src="../images/pexels-upstate.jpg" alt="Syracuse downtown public art">
-            </article>
+                <article class="article2">
+                    <h3>Syracuse</h3>
+                    <p>A vibrant city with a rich history, Syracuse is home to museums, parks, and the renowned Syracuse
+                        University. Be sure to visit the city's downtown for great food and entertainment.</p>
+                    <img src="../images/pexels-upstate.jpg" alt="Syracuse downtown public art">
+                </article>
 
-            <article class="article3">
-                <h3>Niagara Falls</h3>
-                <p>One of the most famous natural wonders in the world, Niagara Falls is a must-see. Whether you view it from a boat tour or one of the observation decks, the falls are a breathtaking sight.</p>
-                <img src="../images/pexels-niagara.jpg" alt="Waterfall at Niagara Falls">
-            </article>
+                <article class="article3">
+                    <h3>Niagara Falls</h3>
+                    <p>One of the most famous natural wonders in the world, Niagara Falls is a must-see. Whether you
+                        view it from a boat tour or one of the observation decks, the falls are a breathtaking sight.
+                    </p>
+                    <img src="../images/pexels-niagara.jpg" alt="Waterfall at Niagara Falls">
+                </article>
 
-            <article class="article4">
-                <h3>Seneca Lake</h3>
-                <p>The banks of the blue water of Seneca Lake create a relaxing experience for swimmers and picnickers.</p>
-                <img src="../images/pexels-seneca-lake.jpg" alt="Seneca Lake">
-            </article>
+                <article class="article4">
+                    <h3>Seneca Lake</h3>
+                    <p>The banks of the blue water of Seneca Lake create a relaxing experience for swimmers and
+                        picnickers.</p>
+                    <img src="../images/pexels-seneca-lake.jpg" alt="Seneca Lake">
+                </article>
 
-        </div>
+            </div>
         </section>
 
 
-    <footer>
-        <p>&copy; 2024 Travel Central New York. All rights reserved.</p>
-        <p><a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a></p>
-    </footer>
+        <footer>
+            <p>&copy; 2024 Travel Central New York. All rights reserved.</p>
+            <p><a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a></p>
+        </footer>
 
 </body>
+
 </html>
