--- a/lab08/layout.html
+++ b/lab08/layout.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title><link rel="stylesheet" href="../lab04/skills.html"> <link rel="stylesheet" href="../lab04/contact2.html"></title>
     <style>
         form {
             margin-top: 20px;
