--- a/lab08/layout.html
+++ b/lab08/layout.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><link rel="stylesheet" href="../lab04/skills.html"> <link rel="stylesheet" href="../lab04/contact2.html"></title>
+    <title>Contact - Adrian Jerez</title>
+    <link rel="stylesheet" href="../lab04/skills.css">
+    <link rel="stylesheet" href="../lab04/contact2.css">
     <style>
+        /* Inline styles as provided */
         form {
             margin-top: 20px;
         }
