--- a/project5.html/disneychannel.html
+++ b/project5.html/disneychannel.html
@@ -10,9 +10,9 @@
         <h1>Disney Channel</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="cartoon-network.html">Cartoon Network</a></li>
-                <li><a href="disney-channel.html">Disney Channel</a></li>
+                <li><a href="homepage.html">Home</a></li>
+                <li><a href="cartoonetwork.html">Cartoon Network</a></li>
+                <li><a href="disneychannel.html">Disney Channel</a></li>
             </ul>
         </nav>
     </header>
