--- a/project5.html/homepage.html
+++ b/project5.html/homepage.html
@@ -4,6 +4,94 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Nostalgic TV</title>
+    <style>
+        body {
+            background-color: lightblue;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            text-align: center;
+            padding: 20px;
+        }
+
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            gap: 15px;
+        }
+
+        nav ul li {
+            display: inline;
+        }
+
+        nav ul li a {
+            text-decoration: none;
+            color: darkblue;
+            font-weight: bold;
+        }
+
+        main {
+            margin: 20px auto;
+            padding: 20px;
+            max-width: 800px;
+            background-color: white;
+            border: 2px solid darkblue;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        section {
+            margin-bottom: 20px;
+        }
+
+        section img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 10px auto;
+            border: 2px solid darkblue;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        section p {
+            line-height: 1.6;
+            text-align: center;
+        }
+
+        .search-bar {
+            text-align: center;
+            margin: 20px 0;
+        }
+
+        .search-bar input[type="text"] {
+            width: 60%;
+            padding: 10px;
+            font-size: 16px;
+            border: 2px solid darkblue;
+            border-radius: 4px;
+        }
+
+        .search-bar input[type="submit"] {
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: darkblue;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        .search-bar input[type="submit"]:hover {
+            background-color: navy;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -16,11 +104,27 @@
             </ul>
         </nav>
     </header>
+    <div class="search-bar">
+        <form action="#" method="get">
+            <input type="text" name="search" placeholder="Search your favorite shows...">
+            <input type="submit" value="Search">
+        </form>
+    </div>
     <main>
         <section>
-            <p>Dive into a world of nostalgia as we explore three beloved TV networks that defined our childhoods: Cartoon Network, Disney Channel, and Nickelodeon.</p>
-            <p>Discover the history behind these networks, revisit your favorite shows, and enjoy a gallery of classic moments.</p>
-            <p>Feel free to browse, relive the fun, and share your own memories with us through our contact form. Enjoy your trip down memory lane!</p>
+            <h2>Relive Cartoon Network Classics</h2>
+            <img src="../images/CN.jpg" alt="Cartoon Network Logo">
+            <p>Explore the world of Cartoon Network, home to unforgettable characters like Dexter, Blossom, and Jake the Dog.</p>
+        </section>
+        <section>
+            <h2>Disney Channel Memories</h2>
+            <img src="../images/alldisney.jpg" alt="Disney Channel Logo">
+            <p>Revisit magical Disney Channel shows like *Hannah Montana* and *The Suite Life of Zack & Cody* that shaped your childhood.</p>
+        </section>
+        <section>
+            <h2>Nickelodeon Favorites</h2>
+            <img src="../images/nickel.jpg" alt="Nickelodeon Logo">
+            <p>Laugh and reminisce with Nickelodeon’s most beloved shows, from *SpongeBob SquarePants* to *Rugrats*.</p>
         </section>
     </main>
 </body>
