--- a/project5.html/homepage.html
+++ b/project5.html/homepage.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Nostalgic TV</title>
     <style>
+        /* Import cartoonish font */
+        @import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
+
         body {
             background-color: lightblue;
             font-family: Arial, sans-serif;
@@ -15,6 +18,12 @@
         header {
             text-align: center;
             padding: 20px;
+        }
+
+        h1, h2 {
+            font-family: 'Bangers', Arial, sans-serif;
+            color: darkblue;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
         }
 
         nav ul {
@@ -34,6 +43,7 @@
             text-decoration: none;
             color: darkblue;
             font-weight: bold;
+            font-size: 18px;
         }
 
         main {
