--- a/project5.html/cartoonetwork.html
+++ b/project5.html/cartoonetwork.html
@@ -138,15 +138,15 @@
         <!-- Images Section -->
         <section class="images-section">
             <div>
-                <img src="images/powerpuff-girls.jpg" alt="The Powerpuff Girls">
+                <img src="../images/powerpuff.png" alt="The Powerpuff Girls">
                 <p><strong>The Powerpuff Girls</strong></p>
             </div>
             <div>
-                <img src="images/dexters-lab.jpg" alt="Dexter's Laboratory">
+                <img src="../images/adventure.png" alt="Dexter's Laboratory">
                 <p><strong>Dexter's Laboratory</strong></p>
             </div>
             <div>
-                <img src="images/adventure-time.jpg" alt="Adventure Time">
+                <img src="../images/egg.png" alt="Adventure Time">
                 <p><strong>Adventure Time</strong></p>
             </div>
         </section>
