--- a/project5.html/cartoonetwork.html
+++ b/project5.html/cartoonetwork.html
@@ -142,11 +142,11 @@
                 <p><strong>The Powerpuff Girls</strong></p>
             </div>
             <div>
-                <img src="../images/adventure.png" alt="Dexter's Laboratory">
+                <img src="../images/egg.png" alt="Dexter's Laboratory">
                 <p><strong>Dexter's Laboratory</strong></p>
             </div>
             <div>
-                <img src="../images/egg.png" alt="Adventure Time">
+                <img src="../images/adventure.png" alt="Adventure Time">
                 <p><strong>Adventure Time</strong></p>
             </div>
         </section>
