--- a/project5.html/disneychannel.html
+++ b/project5.html/disneychannel.html
@@ -137,11 +137,11 @@
         </section>
         <section class="images-section">
             <div>
-                <img src="images/hannah-montana.jpg" alt="Hannah Montana">
+                <img src="../images/hannaM.jpg" alt="Hannah Montana">
                 <p><strong>Hannah Montana</strong></p>
             </div>
             <div>
-                <img src="images/lizzie-mcguire.jpg" alt="Lizzie McGuire">
+                <img src="../images/" alt="Lizzie McGuire">
                 <p><strong>Lizzie McGuire</strong></p>
             </div>
             <div>
