--- a/lab12/lab12.html
+++ b/lab12/lab12.html
@@ -5,24 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planet Slideshow</title>
     <style>
-        /* General styles */
+      
         body {
-            font-family: Arial, sans-serif;
+            background-color: black;
+            color: white;
+            font-family: 'Orbitron', sans-serif;
+            margin: 0;
+            padding: 20px;
+        }
+
+        h1 {
+            text-align: center;
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+            color: #00ffff; 
         }
 
         #planetContainer {
             display: flex;
             flex-direction: row;
+            justify-content: center;
+            align-items: flex-start;
+            gap: 20px;
             margin-bottom: 20px;
         }
 
         #planetDisplay img {
             max-width: 300px;
             max-height: 300px;
+            border: 2px solid #00ffff; 
+            border-radius: 10px;
         }
 
         #planetInfo {
-            margin-left: 20px;
+            max-width: 400px;
         }
 
         .thumbnail {
@@ -31,6 +47,14 @@
             cursor: pointer;
             width: 100px;
             height: 100px;
+            transition: transform 0.3s, border-color 0.3s;
+            border: 2px solid white;
+            border-radius: 5px;
+        }
+
+        .thumbnail:hover {
+            transform: scale(1.2);
+            border-color: #00ffff; /* Cyan highlight on hover */
         }
 
         /* Hide all large images and text except Mercury */
@@ -50,7 +74,7 @@
     <div id="planetContainer">
         <div id="planetDisplay">
             <img id="mercury" src="../images/mecury.jpg" alt="Mercury">
-            <img id="venus" src="venus_lar.jpg" alt="Venus">
+            <img id="venus" src="../images/venus.jpg" alt="Venus">
             <img id="earth" src="../images/earth.jpg" alt="Earth">
             <img id="mars" src="../images/mars.jpg" alt="Mars">
             <img id="jupiter" src="../images/jupiter.jpg" alt="Jupiter">
