--- a/lab12/lab12.html
+++ b/lab12/lab12.html
@@ -54,10 +54,9 @@
 
         .thumbnail:hover {
             transform: scale(1.2);
-            border-color: #00ffff; /* Cyan highlight on hover */
+            border-color: #00ffff; 
         }
 
-        /* Hide all large images and text except Mercury */
         #venus, #earth, #mars, #jupiter, #saturn, #uranus, #neptune,
         #venusInfo, #earthInfo, #marsInfo, #jupiterInfo, #saturnInfo, #uranusInfo, #neptuneInfo {
             display: none;
@@ -107,7 +106,6 @@
 
     <script>
         function PlanetsOff() {
-            // Turn off all large images
             document.getElementById('mercury').style.display = 'none';
             document.getElementById('venus').style.display = 'none';
             document.getElementById('earth').style.display = 'none';
