--- a/project/disneychannel.html
+++ b/project/disneychannel.html
@@ -141,11 +141,11 @@
                 <p><strong>Hannah Montana</strong></p>
             </div>
             <div>
-                <img src="../images/" alt="Lizzie McGuire">
+                <img src="../images/lizzie.jpg" alt="Lizzie McGuire">
                 <p><strong>Lizzie McGuire</strong></p>
             </div>
             <div>
-                <img src="images/suite-life.jpg" alt="The Suite Life of Zack & Cody">
+                <img src="../images/zachncody.jpg" alt="The Suite Life of Zack & Cody">
                 <p><strong>The Suite Life of Zack & Cody</strong></p>
             </div>
         </section>
