--- a/project/cartoonetwork.html
+++ b/project/cartoonetwork.html
@@ -13,6 +13,7 @@
             background-color: #f0f8ff;
             margin: 0;
             padding: 0;
+            text-align: center; /* Center text alignment for the entire body */
         }
 
         header {
@@ -88,24 +89,28 @@
 
         section p {
             line-height: 1.6;
-            text-align: center;
             font-size: 1.1em;
         }
 
         .images-section {
             display: flex;
-            justify-content: space-around;
+            justify-content: center; /* Center the images */
             gap: 20px;
         }
 
         .images-section div {
             width: 30%;
+            text-align: center; /* Center align text below images */
         }
 
         .images-section img {
             width: 100%;
             border: 3px solid darkblue;
             border-radius: 10px;
+        }
+
+        .images-section p {
+            margin-top: 10px;
         }
     </style>
 </head>
@@ -142,7 +147,7 @@
                 <p><strong>The Powerpuff Girls</strong></p>
             </div>
             <div>
-                <img src="../images/egg.png" alt="Dexter's Laboratory">
+                <img src="../images/324px-Courage_Logo.png" alt="Dexter's Laboratory">
                 <p><strong>Dexter's Laboratory</strong></p>
             </div>
             <div>
