--- a/project/cartoonetwork.html
+++ b/project/cartoonetwork.html
@@ -3,17 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cartoon Network - Nostalgic TV</title>
-    <!-- Importing the Bangers font from Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+    <title>Cartoon Network - Nostalgic TV 🎉</title>
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap" rel="stylesheet">
     <style>
-        /* Apply Bangers font to the whole page */
         body {
-            font-family: 'Bangers', sans-serif;
+            font-family: 'Comic Neue', cursive;
             background-color: #f0f8ff;
             margin: 0;
             padding: 0;
-            text-align: center; /* Center text alignment for the entire body */
+            text-align: center;
         }
 
         header {
@@ -25,7 +23,7 @@
 
         header h1 {
             color: darkblue;
-            font-size: 3em;
+            font-size: 3.5em;
             margin: 0;
         }
 
@@ -35,21 +33,17 @@
             margin: 0;
             display: flex;
             justify-content: center;
-            gap: 15px;
-        }
-
-        nav ul li {
-            display: inline;
+            gap: 20px;
         }
 
         nav ul li a {
             text-decoration: none;
             color: darkblue;
-            font-size: 1.2em;
+            font-size: 1.5em;
             font-weight: bold;
-            padding: 5px 10px;
-            border: 2px solid darkblue;
-            border-radius: 5px;
+            padding: 8px 15px;
+            border: 3px solid darkblue;
+            border-radius: 8px;
         }
 
         nav ul li a:hover {
@@ -62,51 +56,52 @@
             padding: 20px;
             max-width: 900px;
             background-color: white;
-            border: 2px solid #ff9900;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border: 3px solid #ff9900;
+            border-radius: 12px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
         }
 
         section {
-            margin-bottom: 20px;
+            margin-bottom: 30px;
         }
 
         section img {
             max-width: 100%;
             height: auto;
             display: block;
-            margin: 15px auto;
+            margin: 20px auto;
             border: 3px solid #ff9900;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 12px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
         }
 
         section h2 {
             color: darkblue;
-            font-size: 2em;
-            margin-bottom: 10px;
+            font-size: 2.5em;
+            margin-bottom: 15px;
         }
 
         section p {
-            line-height: 1.6;
-            font-size: 1.1em;
+            line-height: 1.8;
+            font-size: 1.4em;
         }
 
         .images-section {
             display: flex;
-            justify-content: center; /* Center the images */
+            justify-content: center;
             gap: 20px;
+            flex-wrap: wrap;
         }
 
         .images-section div {
             width: 30%;
-            text-align: center; /* Center align text below images */
+            text-align: center;
         }
 
         .images-section img {
             width: 100%;
             border: 3px solid darkblue;
-            border-radius: 10px;
+            border-radius: 12px;
         }
 
         .images-section p {
@@ -116,43 +111,37 @@
 </head>
 <body>
     <header>
-        <h1>Cartoon Network</h1>
+        <h1>Cartoon Network 🎥</h1>
         <nav>
             <ul>
-                <li><a href="homepage.html">Home</a></li>
-                <li><a href="cartoonetwork.html">Cartoon Network</a></li>
-                <li><a href="disneychannel.html">Disney Channel</a></li>
+                <li><a href="homepage.html">🏠 Home</a></li>
+                <li><a href="cartoonetwork.html">🎞 Cartoon Network</a></li>
+                <li><a href="disneychannel.html">🌟 Disney Channel</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
-            <p>Cartoon Network first aired in October 1992, quickly becoming a beloved channel for animation fans of all ages.</p>
-            <h2>Popular Shows:</h2>
+            <p>Cartoon Network first aired in October 1992, quickly becoming a beloved channel for animation fans of all ages. 🐾</p>
+            <h2>Popular Shows 🎉:</h2>
             <ul>
-                <li><strong>The Powerpuff Girls:</strong> Blossom, Bubbles, and Buttercup fight crime and save Townsville.</li>
-                <li><strong>Dexter's Laboratory:</strong> Follow Dexter as he navigates life as a boy genius.</li>
-                <li><strong>Adventure Time:</strong> Journey with Finn and Jake in the Land of Ooo.</li>
-            </ul>
-            <h2>Fun Facts:</h2>
-            <ul>
-                <li>Cartoon Network was the first network to broadcast animated content 24/7.</li>
-                <li>The signature bouncing ball bumper is iconic to the brand.</li>
+                <li>🌟 <strong>The Powerpuff Girls:</strong> Blossom, Bubbles, and Buttercup fight crime and save Townsville.</li>
+                <li>🧪 <strong>Dexter's Laboratory:</strong> Follow Dexter as he navigates life as a boy genius.</li>
+                <li>🗺️ <strong>Adventure Time:</strong> Journey with Finn and Jake in the Land of Ooo.</li>
             </ul>
         </section>
-        <!-- Images Section -->
         <section class="images-section">
             <div>
                 <img src="../images/powerpuff.png" alt="The Powerpuff Girls">
-                <p><strong>The Powerpuff Girls</strong></p>
+                <p>🌟 <strong>The Powerpuff Girls</strong></p>
             </div>
             <div>
-                <img src="../images/324px-Courage_Logo.png" alt="Dexter's Laboratory">
-                <p><strong>Dexter's Laboratory</strong></p>
+                <img src="../images/egg.png" alt="Dexter's Laboratory">
+                <p>🧪 <strong>Dexter's Laboratory</strong></p>
             </div>
             <div>
                 <img src="../images/adventure.png" alt="Adventure Time">
-                <p><strong>Adventure Time</strong></p>
+                <p>🗺️ <strong>Adventure Time</strong></p>
             </div>
         </section>
     </main>
