--- a/project/disneychannel.html
+++ b/project/disneychannel.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Disney Channel - Nostalgic TV</title>
-    <!-- Importing the Bangers font from Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+    <title>Disney Channel - Nostalgic TV ✨</title>
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap" rel="stylesheet">
     <style>
-        /* Apply Bangers font to the whole page */
         body {
-            font-family: 'Bangers', sans-serif;
+            font-family: 'Comic Neue', cursive;
             background-color: #f0f8ff;
             margin: 0;
             padding: 0;
+            text-align: center;
         }
 
         header {
@@ -24,7 +23,7 @@
 
         header h1 {
             color: darkblue;
-            font-size: 3em;
+            font-size: 3.5em;
             margin: 0;
         }
 
@@ -34,21 +33,17 @@
             margin: 0;
             display: flex;
             justify-content: center;
-            gap: 15px;
-        }
-
-        nav ul li {
-            display: inline;
+            gap: 20px;
         }
 
         nav ul li a {
             text-decoration: none;
             color: darkblue;
-            font-size: 1.2em;
+            font-size: 1.5em;
             font-weight: bold;
-            padding: 5px 10px;
-            border: 2px solid darkblue;
-            border-radius: 5px;
+            padding: 8px 15px;
+            border: 3px solid darkblue;
+            border-radius: 8px;
         }
 
         nav ul li a:hover {
@@ -61,94 +56,71 @@
             padding: 20px;
             max-width: 900px;
             background-color: white;
-            border: 2px solid #ff9900;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        section {
-            margin-bottom: 20px;
+            border: 3px solid #ff9900;
+            border-radius: 12px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
         }
 
         section img {
             max-width: 100%;
             height: auto;
             display: block;
-            margin: 15px auto;
+            margin: 20px auto;
             border: 3px solid #ff9900;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 12px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
         }
 
         section h2 {
             color: darkblue;
-            font-size: 2em;
-            margin-bottom: 10px;
+            font-size: 2.5em;
+            margin-bottom: 15px;
         }
 
         section p {
-            line-height: 1.6;
-            text-align: center;
-            font-size: 1.1em;
+            line-height: 1.8;
+            font-size: 1.4em;
         }
 
         .images-section {
             display: flex;
-            justify-content: space-around;
+            justify-content: center;
             gap: 20px;
+            flex-wrap: wrap;
         }
 
         .images-section div {
             width: 30%;
+            text-align: center;
         }
 
         .images-section img {
             width: 100%;
             border: 3px solid darkblue;
-            border-radius: 10px;
+            border-radius: 12px;
+        }
+
+        .images-section p {
+            margin-top: 10px;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Disney Channel</h1>
+        <h1>Disney Channel ✨</h1>
         <nav>
             <ul>
-                <li><a href="homepage.html">Home</a></li>
-                <li><a href="cartoonetwork.html">Cartoon Network</a></li>
-                <li><a href="disneychannel.html">Disney Channel</a></li>
+                <li><a href="homepage.html">🏠 Home</a></li>
+                <li><a href="cartoonetwork.html">🎞 Cartoon Network</a></li>
+                <li><a href="disneychannel.html">🌟 Disney Channel</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
-            <p>Since its launch in April 1983, Disney Channel has been a cornerstone of family entertainment.</p>
-            <h2>Popular Shows:</h2>
+            <p>Since its launch in April 1983, Disney Channel has been a cornerstone of family entertainment. 🏰</p>
+            <h2>Popular Shows ✨:</h2>
             <ul>
-                <li><strong>Hannah Montana:</strong> Miley Stewart's double life as a pop star.</li>
-                <li><strong>Lizzie McGuire:</strong> Lizzie and her friends navigate middle school.</li>
-                <li><strong>The Suite Life of Zack & Cody:</strong> Follow the comedic adventures of twin brothers in a luxury hotel.</li>
-            </ul>
-            <h2>Fun Facts:</h2>
-            <ul>
-                <li>Disney Channel was the first to feature original programming specifically for children and families.</li>
-                <li>The Disney logo and theme song are globally recognized.</li>
-            </ul>
-        </section>
-        <section class="images-section">
-            <div>
-                <img src="../images/hannaM.jpg" alt="Hannah Montana">
-                <p><strong>Hannah Montana</strong></p>
-            </div>
-            <div>
-                <img src="../images/lizzie.jpg" alt="Lizzie McGuire">
-                <p><strong>Lizzie McGuire</strong></p>
-            </div>
-            <div>
-                <img src="../images/zachncody.jpg" alt="The Suite Life of Zack & Cody">
-                <p><strong>The Suite Life of Zack & Cody</strong></p>
-            </div>
-        </section>
-    </main>
-</body>
-</html>
+                <li>🎤 <strong>Hannah Montana:</strong> Miley Stewart's double life as a pop star.</li>
+                <li>🎒 <strong>Lizzie McGuire:</strong> Lizzie and her friends navigate middle school.</li>
+                <li>🏨 <strong>The Suite Life of Zack
