--- a/project/cartoonetwork.html
+++ b/project/cartoonetwork.html
@@ -61,10 +61,6 @@
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
         }
 
-        section {
-            margin-bottom: 30px;
-        }
-
         section img {
             max-width: 100%;
             height: auto;
@@ -73,17 +69,6 @@
             border: 3px solid #ff9900;
             border-radius: 12px;
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-        }
-
-        section h2 {
-            color: darkblue;
-            font-size: 2.5em;
-            margin-bottom: 15px;
-        }
-
-        section p {
-            line-height: 1.8;
-            font-size: 1.4em;
         }
 
         .images-section {
@@ -102,10 +87,6 @@
             width: 100%;
             border: 3px solid darkblue;
             border-radius: 12px;
-        }
-
-        .images-section p {
-            margin-top: 10px;
         }
     </style>
 </head>
@@ -132,11 +113,11 @@
         </section>
         <section class="images-section">
             <div>
-                <img src="../images/powerpuff.png" alt="The Powerpuff Girls">
+                <img src="../images/powerpuff.png alt="The Powerpuff Girls">
                 <p>🌟 <strong>The Powerpuff Girls</strong></p>
             </div>
             <div>
-                <img src="../images/egg.png" alt="Dexter's Laboratory">
+                <img src="../images/324px-Courage_Logo.png" alt="Dexter's Laboratory">
                 <p>🧪 <strong>Dexter's Laboratory</strong></p>
             </div>
             <div>
