--- a/project/disneychannel.html
+++ b/project/disneychannel.html
@@ -46,11 +46,6 @@
             border-radius: 8px;
         }
 
-        nav ul li a:hover {
-            background-color: #ffcc00;
-            color: white;
-        }
-
         main {
             margin: 20px auto;
             padding: 20px;
@@ -61,27 +56,6 @@
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
         }
 
-        section img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin: 20px auto;
-            border: 3px solid #ff9900;
-            border-radius: 12px;
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-        }
-
-        section h2 {
-            color: darkblue;
-            font-size: 2.5em;
-            margin-bottom: 15px;
-        }
-
-        section p {
-            line-height: 1.8;
-            font-size: 1.4em;
-        }
-
         .images-section {
             display: flex;
             justify-content: center;
@@ -89,19 +63,10 @@
             flex-wrap: wrap;
         }
 
-        .images-section div {
-            width: 30%;
-            text-align: center;
-        }
-
         .images-section img {
             width: 100%;
             border: 3px solid darkblue;
             border-radius: 12px;
-        }
-
-        .images-section p {
-            margin-top: 10px;
         }
     </style>
 </head>
@@ -123,4 +88,23 @@
             <ul>
                 <li>🎤 <strong>Hannah Montana:</strong> Miley Stewart's double life as a pop star.</li>
                 <li>🎒 <strong>Lizzie McGuire:</strong> Lizzie and her friends navigate middle school.</li>
-                <li>🏨 <strong>The Suite Life of Zack
+                <li>🏨 <strong>The Suite Life of Zack & Cody:</strong> Follow the comedic adventures of twin brothers in a luxury hotel.</li>
+            </ul>
+        </section>
+        <section class="images-section">
+            <div>
+                <img src="../images/hannaM.jpg" alt="Hannah Montana">
+                <p>🎤 <strong>Hannah Montana</strong></p>
+            </div>
+            <div>
+                <img src="../images/lizzie.jpg alt="Lizzie McGuire">
+                <p>🎒 <strong>Lizzie McGuire</strong></p>
+            </div>
+            <div>
+                <img src="../images/zachncody.jpg" alt="The Suite Life of Zack & Cody">
+                <p>🏨 <strong>The Suite Life of Zack & Cody</strong></p>
+            </div>
+        </section>
+    </main>
+</body>
+</html>
