--- a/project/cartoonetwork.html
+++ b/project/cartoonetwork.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cartoon Network - Nostalgic TV 🎉</title>
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap" rel="stylesheet">
+    <!-- Importing the fun font -->
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Comic Neue', cursive;
+            font-family: 'Fredoka One', cursive;
             background-color: #f0f8ff;
             margin: 0;
             padding: 0;
@@ -23,7 +24,7 @@
 
         header h1 {
             color: darkblue;
-            font-size: 3.5em;
+            font-size: 4.5em; /* Larger font size for header */
             margin: 0;
         }
 
@@ -39,9 +40,9 @@
         nav ul li a {
             text-decoration: none;
             color: darkblue;
-            font-size: 1.5em;
+            font-size: 1.8em; /* Larger font size for navigation */
             font-weight: bold;
-            padding: 8px 15px;
+            padding: 10px 20px;
             border: 3px solid darkblue;
             border-radius: 8px;
         }
@@ -61,6 +62,10 @@
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
         }
 
+        section {
+            margin-bottom: 30px;
+        }
+
         section img {
             max-width: 100%;
             height: auto;
@@ -69,6 +74,21 @@
             border: 3px solid #ff9900;
             border-radius: 12px;
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+        }
+
+        section h2 {
+            color: darkblue;
+            font-size: 3em; /* Larger font size for section headers */
+            margin-bottom: 15px;
+        }
+
+        section p {
+            line-height: 2;
+            font-size: 1.8em; /* Larger font size for paragraphs */
+        }
+
+        ul li {
+            font-size: 1.8em; /* Larger font size for list items */
         }
 
         .images-section {
@@ -87,6 +107,11 @@
             width: 100%;
             border: 3px solid darkblue;
             border-radius: 12px;
+        }
+
+        .images-section p {
+            margin-top: 10px;
+            font-size: 1.6em; /* Larger font size for captions */
         }
     </style>
 </head>
@@ -113,7 +138,7 @@
         </section>
         <section class="images-section">
             <div>
-                <img src="../images/powerpuff.png alt="The Powerpuff Girls">
+                <img src="../images/powerpuff.png" alt="The Powerpuff Girls">
                 <p>🌟 <strong>The Powerpuff Girls</strong></p>
             </div>
             <div>
@@ -127,4 +152,6 @@
         </section>
     </main>
 </body>
+</html>
+
 </html>
